fix spacing

--- a/frontend/packages/ux-editor/src/components/config/EditFormComponent.module.css
+++ b/frontend/packages/ux-editor/src/components/config/EditFormComponent.module.css
@@ -11,3 +11,7 @@
   flex-direction: column;
   gap: var(--fieldset-gap);
 }
+
+.componentSpecificWrapper {
+  padding-inline: var(--ds-size-5);
+}
